# forge

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  forge-server.toml
.claude/: settings.local.json
.claude/mcp/: compile-server.mjs
.github/workflows/: docker.yml  gui.yml  release.yml
actions/forge/ue-build/v1/: action.yaml
actions/forge/ue-cook/v1/: action.yaml
actions/forge/ue-pak/v1/: action.yaml
actions/forge/ue-submit-steam/v1/: action.yaml
actions/forge/ue-test/v1/: action.yaml
crates/forge-agent/: Cargo.toml
crates/forge-agent/src/: actions.rs  main.rs  primitives.rs  runner.rs  shell.rs
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: client.rs  credentials.rs  lib.rs  main.rs  ops.rs  pager.rs  tofu.rs
crates/forge-cli/src/commands/: add.rs  artifacts.rs  asset_info.rs  branch.rs  cat_object.rs  checkout.rs  cherry_pick.rs  clean.rs  clone.rs  config_cmd.rs  diff.rs  fetch.rs  gc.rs  ignore.rs  init.rs  lock.rs  locks.rs  log.rs  login.rs  logout.rs  merge.rs  mod.rs  mv.rs  pull.rs  push.rs  remote.rs  reset.rs  restore.rs  revert.rs  rm.rs  runs.rs  secrets.rs  show.rs  snapshot.rs  stash.rs  status.rs  switch.rs  tag.rs  trust.rs  unlock.rs  (+5 more)
crates/forge-cli/src/commands/diff/: blob.rs  mod.rs  source.rs
crates/forge-client/: Cargo.toml
crates/forge-client/src/: client.rs  credentials.rs  edge.rs  lib.rs  tofu.rs  url_resolver.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: asset_group.rs  bulk_chunk.rs  ca_publish.rs  chunk.rs  compress.rs  diff.rs  error.rs  hash.rs  index.rs  lib.rs  uasset.rs  uasset_chunk.rs  uasset_diff.rs  uasset_merge.rs  uasset_reconstruct.rs  workspace.rs
crates/forge-core/src/object/: blob.rs  lock.rs  mod.rs  snapshot.rs  tree.rs
crates/forge-core/src/store/: backend.rs  chunk_store.rs  mod.rs  object_store.rs  pack.rs
crates/forge-diff/: Cargo.toml
crates/forge-diff/src/: asset_paths.rs  change.rs  engine.rs  k2node.rs  label.rs  lib.rs
crates/forge-diff/src/format/: class_stats.rs  colored.rs  extract.rs  file_diff.rs  json.rs  mod.rs  renumber.rs  stat.rs  unified.rs
crates/forge-diff/src/handler/: blueprint_vars.rs  enum_values.rs  field_defs.rs  imports.rs  k2node_pins.rs  mod.rs  properties.rs
crates/forge-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/forge-ffi/include/: forge_ffi.h
crates/forge-ffi/src/: lib.rs
crates/forge-ignore/: Cargo.toml
crates/forge-ignore/src/: lib.rs
crates/forge-proto/: Cargo.toml  build.rs
crates/forge-proto/src/: lib.rs
crates/forge-server/: Cargo.toml
crates/forge-server/benches/: concurrency.rs  metadata.rs
crates/forge-server/src/: cert_install.rs  cli_admin.rs  config.rs  lib.rs  main.rs  observability.rs  service.rs  tls_autogen.rs  uninstall.rs  update.rs
crates/forge-server/src/auth/: authorize.rs  caller.rs  interceptor.rs  mod.rs  password.rs  store.rs  store_postgres.rs  tests.rs  tests_postgres.rs  tokens.rs
crates/forge-server/src/services/: agent_sweeper.rs  agents.rs  auth.rs  auth_service.rs  edge.rs  gc.rs  grpc.rs  load_test.rs  lock_events.rs  locks.rs  logs.rs  metrics.rs  mod.rs  objects.rs  postgres_docker.rs  refs.rs  repack.rs  repo_ops_drain.rs  session_sweeper.rs  validate.rs
crates/forge-server/src/services/actions/: db.rs  engine.rs  mod.rs  shell.rs  trigger.rs  workspace.rs  yaml.rs
crates/forge-server/src/services/artifacts/: fs.rs  mod.rs  retention.rs  s3.rs  signed_url.rs
crates/forge-server/src/services/secrets/: kms.rs  mask.rs  master_key.rs  mod.rs  sqlite.rs
crates/forge-server/src/storage/: backend.rs  db.rs  fs.rs  mod.rs  parity_tests.rs  postgres.rs  postgres_full.rs  repo_backend.rs  s3_objects.rs  s3_repo.rs
crates/forge-server/src/storage/migrations/: mod.rs
crates/forge-server/src/storage/migrations/postgres/: 0001_baseline.sql  0002_pending_repo_ops.sql  0003_auth.sql  0004_full_schema.sql
crates/forge-server/src/storage/migrations/sqlite/: 0002_runner_bootstrap_check.sql  0003_pending_repo_ops.sql
crates/forge-unreal/: Cargo.toml
crates/forge-unreal/src/: archive.rs  enums.rs  error.rs  ffield.rs  lib.rs  property.rs  serialization.rs  structured.rs
crates/forge-unreal/src/serialization/: implementations.rs
crates/forge-web/server/: Cargo.toml
crates/forge-web/server/src/: api.rs  api_actions.rs  auth.rs  config.rs  grpc_client.rs  main.rs  observability.rs  service.rs  tls_autogen.rs
crates/forge-web/ui/: index.html  package-lock.json  package.json  tsconfig.app.json
crates/forge-web/ui/src/: App.tsx  api.ts  index.css  main.tsx  mockApi.ts  utils.ts
crates/forge-web/ui/src/pages/: Docs.tsx  (+28 more)
crates/uasset/src/: archive.rs  enums.rs  ffield.rs  lib.rs  property.rs  structured.rs
docker/: build.sh  forge-server.toml  forge-web.toml
docs/: REBUILD_FINDINGS.md  binary-asset-storage.md  binary-vcs-strategy.md  merge-semantics.md  postgres-mode.md  web-audit.md
docs/branding/: README.md
docs/ha/: edge.md  litestream.yml.example
gui/windows/: Directory.Build.props  Forge.Gui.sln  README.md
gui/windows/src/Forge.Gui.App/: App.xaml  App.xaml.cs  Forge.Gui.App.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
gui/windows/src/Forge.Gui.Core/: Forge.Gui.Core.csproj
gui/windows/src/Forge.Gui.Ffi/: FfiForgeClient.cs  FfiJsonDtos.cs  Forge.Gui.Ffi.csproj  ForgeErrorCodes.cs  ForgeFfiException.cs  ForgeSession.cs  NativeMethods.cs
installers/config/: forge-server.toml  forge-web.toml
installers/linux/: install.sh
installers/macos/: install.sh
installers/windows/: forge-client.iss  forge-server.iss
plugin/ForgeRider/: build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
plugin/ForgeSourceControl/: .forgeignore  .gitignore  ForgeVCS.uproject
plugin/ForgeSourceControl/Config/: DefaultEngine.ini  DefaultGame.ini
plugin/ForgeSourceControl/Scripts/: clean.ps1  compile.ps1  package.ps1
plugin/ForgeSourceControl/Source/: ForgeVCS.Target.cs  ForgeVCSEditor.Target.cs
proto/: forge.proto
scripts/: build.bat  test.bat
(+122 files in other folders)
