[package]
name = "forge-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "forge-agent"
path = "src/main.rs"

[dependencies]
forge-proto.workspace = true
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
indexmap = { version = "2", features = ["serde"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
hex.workspace = true
toml.workspace = true
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
futures = "0.3"
async-stream = "0.3"
bytes = "1"
tokio-stream = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
