[package]
name = "forge-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-core.workspace = true
forge-proto.workspace = true
forge-ignore.workspace = true
clap.workspace = true
anyhow.workspace = true
bincode.workspace = true
tokio.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
whoami = "1"
walkdir.workspace = true
rayon.workspace = true
hex.workspace = true
tokio-stream = "0.1"
similar.workspace = true
indicatif.workspace = true
self-replace.workspace = true
