[package]
name = "forge-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-core.workspace = true
forge-diff.workspace = true
forge-proto.workspace = true
forge-ignore.workspace = true
forge-client.workspace = true
clap.workspace = true
anyhow.workspace = true
bincode.workspace = true
tokio.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
whoami = "1"
walkdir.workspace = true
rayon.workspace = true
crossbeam-channel.workspace = true
hex.workspace = true
tokio-stream = "0.1"
similar.workspace = true
indicatif.workspace = true
self-replace.workspace = true
minus = { version = "5", features = ["static_output"] }
crossterm = "0.27"
keyring = "2"
rpassword = "7"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
webpki-roots = "0.26"
sha2 = "0.10"
dirs = "5"
x509-parser = "0.16"
