[package]
name = "forge-diff"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
forge-core.workspace = true
forge-unreal.workspace = true
similar.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = ["k2-diff"]
# Structured diff for Blueprint K2Node trailing native data (pin changes).
k2-diff = []
