[package]
name = "forge-server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
forge-core.workspace = true
forge-proto.workspace = true
forge-ignore.workspace = true
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
hex.workspace = true
rayon.workspace = true
crossbeam-channel.workspace = true
tokio-stream = "0.1"
toml.workspace = true
serde_yaml.workspace = true
indexmap.workspace = true
uuid.workspace = true
globset.workspace = true
walkdir.workspace = true
indicatif.workspace = true
self-replace.workspace = true
argon2 = "0.5"
rand = "0.8"
rpassword = "7"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
rcgen.workspace = true
sha2 = "0.10"
if-addrs = "0.13"
aes-gcm = "0.10"
regex = "1"
async-trait = "0.1"
hmac = "0.12"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
bytes = "1"
async-stream = "0.3"
axum = "0.7"

postgres = { workspace = true, optional = true }
r2d2_postgres = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
aws-smithy-types = { workspace = true, optional = true }
aws-credential-types = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
# Enables the Postgres metadata backend. Pulls in the sync `postgres`
# crate + r2d2 pool. The server binary builds without it; Postgres is
# opt-in per deployment.
postgres = ["dep:postgres", "dep:r2d2_postgres"]
# Runs the cross-backend integration tests against a live Postgres
# reachable via `DATABASE_URL`. CI-only; leave off for local dev.
postgres-tests = ["postgres"]
# Enables the S3 object backend (Phase 3b). Adds the aws-sdk-s3 stack
# — ~50 transitive deps — so it's opt-in per build. MinIO / Ceph RGW
# clusters are reachable by setting a custom endpoint URL via the
# config, no code changes needed.
s3-objects = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-smithy-types", "dep:aws-credential-types"]
# Runs the cross-backend integration tests against a live S3 endpoint
# (usually a MinIO container) specified via FORGE_S3_ENDPOINT +
# FORGE_S3_BUCKET env vars. CI-only.
s3-objects-tests = ["s3-objects"]

[dev-dependencies]
tempfile.workspace = true
